--- a/CoreChess/Assets/Styles/PaletteDark.axaml
+++ b/CoreChess/Assets/Styles/PaletteDark.axaml
@@ -18,5 +18,6 @@
 
     <Color x:Key="NotificationCardInformationBackgroundBrush">#CF6641</Color>
     <Color x:Key="HighlightColor">#fd7d00</Color>
+    <Color x:Key="SectionBackgroundColor">#19FFFFFF</Color>
   </Style.Resources>
 </Style>
