--- a/CoreChess/Assets/Styles/PaletteLight.axaml
+++ b/CoreChess/Assets/Styles/PaletteLight.axaml
@@ -5,6 +5,10 @@
     <FontFamily x:Key="DefaultFontFamily">avares://CoreChess/Assets/fonts#Roboto</FontFamily>
     <FontFamily x:Key="FigurineFontFamily">avares://CoreChess/Assets/fonts#Chess Alpha 2</FontFamily>
 
+    <Color x:Key="InfoColor">#5bc0de</Color>
+    <Color x:Key="WarningColor">#f0ad4e</Color>
+    <Color x:Key="DangerColor">#d9534f</Color>
+
     <Color x:Key="TextControlBackgroundFocused">#ffffff</Color>
 
     <Color x:Key="TitleBarBackground">#e7e6e5</Color>
