--- a/CoreChess/Views/SettingsWindow.axaml
+++ b/CoreChess/Views/SettingsWindow.axaml
@@ -43,6 +43,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
               </Grid.RowDefinitions>
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -91,7 +92,14 @@
                             Minimum="0"/>
 
               <TextBlock Grid.Row="9" Text="{i18n:Localize OpeningBook}" VerticalAlignment="Center" Margin="0,5,0,5" />
-              <Grid Grid.Row="9" Grid.Column="1" Margin="0,0,5,0">
+              <ComboBox Name="m_OpeningBookType" Grid.Row="9" Grid.Column="1"
+                        SelectionChanged="OnOpeningBookTypeChanged">
+                <ComboBoxItem Content="{i18n:Localize None}" />
+                <ComboBoxItem Content="{i18n:Localize Internal}" />
+                <ComboBoxItem Content="{i18n:Localize Custom}" />
+              </ComboBox>
+
+              <Grid Name="m_OpeningBookCustom" Grid.Row="10" Grid.Column="1" Margin="0,0,5,0">
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="*" />
                   <ColumnDefinition Width="Auto" />
