--- a/CoreChess/Views/UpdateWindow.axaml
+++ b/CoreChess/Views/UpdateWindow.axaml
@@ -24,7 +24,7 @@
             </Grid.RowDefinitions>
 
             <StackPanel Name="m_Download" Orientation="Vertical" IsVisible="False">
-                <TextBlock Text="{i18n:Localize DownloadingUpdate}" Margin="0,0,0,5" />
+                <TextBlock Name="m_Message" TextWrapping="Wrap" Text="{i18n:Localize DownloadingUpdate}" Margin="0,0,0,5" />
                 <Grid>
                     <ProgressBar Name="m_Progress" Minimum="0" Maximum="100" Height="25" Value="0" />
                     <TextBlock Name="m_ProgressMessage" FontSize="12" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5" />
