Undo move (WIP), ref #13

--- a/CoreChess/Views/MainWindow.axaml
+++ b/CoreChess/Views/MainWindow.axaml
@@ -59,6 +59,11 @@
             <i:Icon FontSize="14" Value="fas fa-pause" />
           </MenuItem.Icon>
         </MenuItem>
+        <MenuItem Header="{i18n:Localize _UndoMove}" Click="OnUndoMoveClick" IsEnabled="{Binding IsResignEnabled}" InputGesture="CTRL + Z">
+          <MenuItem.Icon>
+            <i:Icon FontSize="14" Value="fas fa-undo" />
+          </MenuItem.Icon>
+        </MenuItem>
         <MenuItem Header="{i18n:Localize _Resign}" Click="OnResignClick" IsEnabled="{Binding IsResignEnabled}">
           <MenuItem.Icon>
             <i:Icon FontSize="14" Value="fas fa-chess-king" />
