--- a/CoreChess/Controls/Chessboard.axaml
+++ b/CoreChess/Controls/Chessboard.axaml
@@ -9,6 +9,6 @@
              PointerMoved="OnMouseMoved">
 
   <Border CornerRadius="5" ClipToBounds="True">
-    <Canvas x:Name="m_Canvas" UseLayoutRounding="False" />
+    <Canvas x:Name="m_Canvas" UseLayoutRounding="True" />
   </Border>
 </UserControl>
