--- a/CoreChess/App.axaml
+++ b/CoreChess/App.axaml
@@ -1,7 +1,8 @@
 ﻿<Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:CoreChess"
-             x:Class="CoreChess.App">
+             x:Class="CoreChess.App"
+             Name="CoreChess">
 
   <Application.Styles>
     <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseDark.xaml"/>
