Fixed opening book setting

--- a/CoreChess/Views/SettingsWindow.axaml
+++ b/CoreChess/Views/SettingsWindow.axaml
@@ -41,6 +41,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
               </Grid.RowDefinitions>
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -80,19 +81,19 @@
                             Minimum="0"/>
 
               <TextBlock Grid.Row="8" Text="{i18n:Localize OpeningBook}" VerticalAlignment="Center" Margin="0,5,0,5" />
-              <ComboBox Name="m_OpeningBookType" Grid.Row="9" Grid.Column="1" Margin="0,5,0,5"
+              <ComboBox Name="m_OpeningBookType" Grid.Row="8" Grid.Column="1" Margin="0,5,0,5"
                         SelectionChanged="OnOpeningBookTypeChanged">
                 <ComboBoxItem Content="{i18n:Localize None}" />
                 <ComboBoxItem Content="{i18n:Localize Internal}" />
                 <ComboBoxItem Content="{i18n:Localize Custom}" />
               </ComboBox>
 
-              <Grid Name="m_OpeningBookCustom" Grid.Row="8" Grid.Column="1" Margin="0,0,5,0">
+              <Grid Name="m_OpeningBookCustom" Grid.Row="9" Grid.Column="1" >
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="*" />
                   <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBox Name="m_OpeningBook" Margin="5,0,0,0" VerticalAlignment="Center" />
+                <TextBox Name="m_OpeningBook" Margin="0,0,0,0" VerticalAlignment="Center" />
                 <Button Grid.Column="1" Margin="0" Padding="12" Click="OnOpeningBookClick">
                   <i:Icon Value="fas fa-folder-open" />
                 </Button>
