--- a/CoreChess/Views/SettingsWindow.axaml
+++ b/CoreChess/Views/SettingsWindow.axaml
@@ -41,7 +41,6 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
               </Grid.RowDefinitions>
               <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
@@ -60,35 +59,32 @@
                 </ComboBox.ItemTemplate>
               </ComboBox>
 
-              <TextBlock Grid.Row="2" Text="{i18n:Localize Topmost}" VerticalAlignment="Center" />
-              <ToggleSwitch Grid.Row="2" Grid.Column="1" Name="m_Topmost" HorizontalAlignment="Right" />
+              <TextBlock Grid.Row="2" Text="{i18n:Localize EnableAudio}" VerticalAlignment="Center" />
+              <ToggleSwitch Grid.Row="2" Grid.Column="1" Name="m_EnableAudio" HorizontalAlignment="Right" />
 
-              <TextBlock Grid.Row="3" Text="{i18n:Localize EnableAudio}" VerticalAlignment="Center" />
-              <ToggleSwitch Grid.Row="3" Grid.Column="1" Name="m_EnableAudio" HorizontalAlignment="Right" />
+              <TextBlock Grid.Row="3" Text="{i18n:Localize SaveGameOnExit}" VerticalAlignment="Center" />
+              <ToggleSwitch Grid.Row="3" Grid.Column="1" Name="m_SaveOnExit" HorizontalAlignment="Right" />
 
-              <TextBlock Grid.Row="4" Text="{i18n:Localize SaveGameOnExit}" VerticalAlignment="Center" />
-              <ToggleSwitch Grid.Row="4" Grid.Column="1" Name="m_SaveOnExit" HorizontalAlignment="Right" />
+              <TextBlock Grid.Row="4" Text="{i18n:Localize AutoPauseWhenMinimized}" VerticalAlignment="Center" />
+              <ToggleSwitch Grid.Row="4" Grid.Column="1" Name="m_AutoPauseWhenMinimized" HorizontalAlignment="Right" />
 
-              <TextBlock Grid.Row="5" Text="{i18n:Localize AutoPauseWhenMinimized}" VerticalAlignment="Center" />
-              <ToggleSwitch Grid.Row="5" Grid.Column="1" Name="m_AutoPauseWhenMinimized" HorizontalAlignment="Right" />
-
-              <TextBlock Grid.Row="6" Text="{i18n:Localize MaxEngineThinkingTime}" VerticalAlignment="Center" IsVisible="False" />
-              <NumericUpDown Grid.Row="7" Grid.Column="1" Name="m_MaxEngineThinkingTimeSecs" IsVisible="False"
+              <TextBlock Grid.Row="5" Text="{i18n:Localize MaxEngineThinkingTime}" VerticalAlignment="Center" IsVisible="False" />
+              <NumericUpDown Grid.Row="5" Grid.Column="1" Name="m_MaxEngineThinkingTimeSecs" IsVisible="False"
                             Minimum="0"/>
 
-              <TextBlock Grid.Row="7" Text="{i18n:Localize MaxEngineDepth}" VerticalAlignment="Center" IsVisible="False" />
-              <NumericUpDown Grid.Row="8" Grid.Column="1" Name="m_MaxEngineDepth" IsVisible="False"
+              <TextBlock Grid.Row="6" Text="{i18n:Localize MaxEngineDepth}" VerticalAlignment="Center" IsVisible="False" />
+              <NumericUpDown Grid.Row="6" Grid.Column="1" Name="m_MaxEngineDepth" IsVisible="False"
                             Minimum="0"/>
 
-              <TextBlock Grid.Row="8" Text="{i18n:Localize OpeningBook}" VerticalAlignment="Center" Margin="0,5,0,5" />
-              <ComboBox Name="m_OpeningBookType" Grid.Row="8" Grid.Column="1" Margin="0,5,0,5"
+              <TextBlock Grid.Row="7" Text="{i18n:Localize OpeningBook}" VerticalAlignment="Center" Margin="0,5,0,5" />
+              <ComboBox Name="m_OpeningBookType" Grid.Row="7" Grid.Column="1" Margin="0,5,0,5"
                         SelectionChanged="OnOpeningBookTypeChanged">
                 <ComboBoxItem Content="{i18n:Localize None}" />
                 <ComboBoxItem Content="{i18n:Localize Internal}" />
                 <ComboBoxItem Content="{i18n:Localize Custom}" />
               </ComboBox>
 
-              <Grid Name="m_OpeningBookCustom" Grid.Row="9" Grid.Column="1" >
+              <Grid Name="m_OpeningBookCustom" Grid.Row="8" Grid.Column="1" >
                 <Grid.ColumnDefinitions>
                   <ColumnDefinition Width="*" />
                   <ColumnDefinition Width="Auto" />
@@ -106,6 +102,8 @@
           <ScrollViewer HorizontalScrollBarVisibility="Disabled">
             <Grid Name="m_AppearenceGrid">
               <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
@@ -136,6 +134,12 @@
 
               <TextBlock Grid.Row="2" Text="{i18n:Localize AccentColor}" VerticalAlignment="Center" />
               <TextBlock Grid.Row="3" Text="{i18n:Localize HighlightColor}" VerticalAlignment="Center" />
+
+              <TextBlock Grid.Row="4" Text="{i18n:Localize Topmost}" VerticalAlignment="Center" />
+              <ToggleSwitch Grid.Row="4" Grid.Column="1" Name="m_Topmost" HorizontalAlignment="Right" />
+
+              <TextBlock Grid.Row="5" Text="{i18n:Localize RestoreWindowSizeAndPosition}" VerticalAlignment="Center" />
+              <ToggleSwitch Grid.Row="5" Grid.Column="1" Name="m_RestoreWindowSizeAndPosition" HorizontalAlignment="Right" />
             </Grid>
           </ScrollViewer>
         </TabItem>
