--- a/CoreChess/Views/MainWindow.axaml
+++ b/CoreChess/Views/MainWindow.axaml
@@ -22,8 +22,9 @@
   </Window.Resources>
 
   <DockPanel>
+    <Label IsVisible="{Binding !#m_Menu.IsVisible}" Height="{Binding #m_Menu.Height}" Width="{Binding #m_Board.Width}" DockPanel.Dock="Top"/>
     <controls:TitleBar DockPanel.Dock="Top"/>
-    <Menu IsVisible="{Binding !IsPaused}" DockPanel.Dock="Top">
+    <Menu Name="m_Menu" IsVisible="{Binding !IsPaused}" DockPanel.Dock="Top">
       <MenuItem Header="{i18n:Localize _File}">
         <MenuItem Header="{i18n:Localize _NewGame}" Click="OnNewGameClick" InputGesture="CTRL + N">
           <MenuItem.Icon>
@@ -174,7 +175,7 @@
       </MenuItem>
     </Menu>
 
-    <Grid Margin="5">
+    <Grid Name="m_Board" Margin="5">
       <Grid.ColumnDefinitions>
         <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="*"/>
@@ -184,9 +185,10 @@
         <RowDefinition Height="*"/>
       </Grid.RowDefinitions>
 
-      <Grid Margin="0,5,0,5" Width="{Binding #m_Chessboard.Bounds.Width}">
+      <Grid Name="m_Content" Margin="0,5,0,5" Width="{Binding #m_Chessboard.Bounds.Width}">
         <Grid.ColumnDefinitions>
           <ColumnDefinition Width="*"/>
+          <ColumnDefinition Width="Auto"/>
           <ColumnDefinition Width="Auto"/>
           <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -206,14 +208,19 @@
           </StackPanel>
         </Grid>
 
-        <Button Name="m_PauseBtn" Classes="Small" Grid.Column="1" Click="OnPauseClick" ToolTip.Tip="Ctrl-P">
+        <Button Name="m_PauseBtn" Classes="Small" Grid.Column="1" Click="OnPauseClick" ToolTip.Tip="Pause Ctrl-P">
           <StackPanel Orientation="Horizontal">
             <i:Icon Value="fas fa-pause" />
-            <TextBlock Text="{i18n:Localize Pause}" Margin="5,0,0,0"/>
+          </StackPanel>
+        </Button>
+        
+        <Button Name="m_CompactModeBtn" Classes="Small" Grid.Column="2" Command="{Binding OnCompactModeClick}" ToolTip.Tip="Compact Mode">
+          <StackPanel Orientation="Horizontal">
+            <i:Icon Value="fas fa-chess-board" />
           </StackPanel>
         </Button>
 
-        <Grid Grid.Column="2">
+        <Grid Grid.Column="3">
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
@@ -239,6 +246,7 @@
         GameEnded="OnGameEnded"
         WhiteTimer="OnWhiteTimer"
         BlackTimer="OnBlackTimer"
+        Height="{Binding #Bounds.Height}"
         Width="{Binding #m_Chessboard.Bounds.Height}"/>
 
       <Grid Name="m_Wait" Grid.Row="0" Grid.RowSpan="2" Background="{DynamicResource SystemControlBackgroundAltHighBrush}" IsVisible="True">
@@ -249,7 +257,7 @@
         </StackPanel>
       </Grid>
 
-      <Grid Margin="5,5,0,0" Grid.Row="0" Grid.RowSpan="2" Grid.Column="1">
+      <Grid Name="m_SidePanel" Margin="5,5,0,0" Grid.Row="0" Grid.RowSpan="2" Grid.Column="1">
         <Grid.RowDefinitions>
           <RowDefinition Height="Auto" />
           <RowDefinition Height="*" />
